Code to resolve horizontal scrolling on mobile devices

--- a/static/css/codeblock.css
+++ b/static/css/codeblock.css
@@ -11,14 +11,17 @@
 } */
 
 /* --- Code to resolve horizontal scrolling on mobile devices --- */
-/* pre {
+pre {
   font-size: 15px;
   line-height: 1.2em;
 }
-pre code {
-  white-space: pre;
-} */
+@media only screen and (min-width: 768px) {
+  pre code {
+    white-space: pre;
+  }
+}
 /* --- Code to resolve horizontal scrolling on mobile devices --- */
+
 /* code from Yihui Xie*/
 pre {
   border: 1px solid #ddd;
