--- a/themes/beautifulhugo/static/css/codeblock.css
+++ b/themes/beautifulhugo/static/css/codeblock.css
@@ -11,15 +11,16 @@ pre {
   }
 } */
 /* --- Code to resolve horizontal scrolling on mobile devices --- */
-/* pre {
+pre {
   font-size: 15px;
   line-height: 1.2em;
 }
-pre code {
-  white-space: pre;
-} */
+@media only screen and (min-width: 768px) {
+  pre code {
+    white-space: pre;
+  }
+}
 /* --- Code to resolve horizontal scrolling on mobile devices --- */
-/* code */
 
 /* code from Yihui Xie*/
 pre {
