--- a/themes/beautifulhugo/static/css/main.css
+++ b/themes/beautifulhugo/static/css/main.css
@@ -43,11 +43,15 @@ a:focus {
 blockquote p:first-child {
   margin-top: 0;
 } */
-/* from Yihui */
+/* from Yihui - blockquote*/
 blockquote {
   background: #f9f9f9;
   border-left: 5px solid #ccc;
   padding: 3px 1em 3px;
+}
+/* adding a dot after section number */
+span.header-section-number:after {
+    content: ".";
 }
 /* end */
 
